@@ -1,3 +1,9 @@
+2009-11-04  Jason Merrill  <jason@redhat.com>
+
+	PR c++/35067
+	* method.c (use_thunk): Check DECL_WEAK as well as
+	DECL_ONE_ONLY.
+
 2009-11-03  Jason Merrill  <jason@redhat.com>
 
 	PR c++/36959
